--- a/pc/include/css/common.css
+++ b/pc/include/css/common.css
@@ -528,7 +528,7 @@ span.ico16_loudspeaker_white{ display:inline-block;width:16px;height:16px;margin
 #container .main_search_area .inner_search .btn_cate_select .icon.active { transform: rotate(-180deg);}
 #container .main_search_area .inner_search input[type="text"] { width: 417px; height: 45px; padding-left: 10px; font-size: 20px; margin-left: 64px; border-radius: 4px; outline-offset: 4px; background-color: transparent;}
 #container .main_search_area .inner_search input[type="text"]::placeholder { font-size: 20px;}
-#container .main_search_area .inner_search .btn_main_search { position: absolute; left: initial; right: 24px; top: 50%; z-index: 1; margin-top: -18px; background: url("../images/ico32_search_blue.svg") no-repeat;}
+#container .main_search_area .inner_search .btn_main_search { position: absolute; left: initial; right: 24px; top: 50%; z-index: 1; margin-top: -18px; background: url("/cm/static/images/ico32_search_blue.svg") no-repeat;}
 #container .main_search_area .inner_search .btn_vrt_keyboard { position: absolute; left: initial; right: 60px; top: 50%; z-index: 1; margin-top: -18px; background: url(../images/ico_keyboard.svg) no-repeat;    display: inline-block;width: 32px;height: 32px;}
 #container .main_search_area .inner_select { position: absolute; left: 0; top: 0; z-index: 1;}
 #container .recommend_keyword { display: flex; align-items: flex-start; margin-top: 24px;}
@@ -547,7 +547,7 @@ span.ico16_loudspeaker_white{ display:inline-block;width:16px;height:16px;margin
 .main_search_area .inner_search .btn_main_search {top: 3px; left: 5px;}
 .recommend_keyword {display: flex; justify-content: center; align-items: center; margin-top: 20px;}
 /* 250819 수정 */
-.recommend_keyword dt {padding-left: 20px; color: var(--col_p); font-size: 14px; background:url("../images/ico24_search.svg") no-repeat 0 0; background-size: 16px; flex-shrink: 0;}
+.recommend_keyword dt {padding-left: 20px; color: var(--col_p); font-size: 14px; background:url("/cm/static/images/ico24_search.svg") no-repeat 0 0; background-size: 16px; flex-shrink: 0;}
 .recommend_keyword dd {margin-left: 14px;}
 .recommend_keyword dd ul {display: flex; flex-wrap: wrap; justify-content: flex-start; align-items: center; gap: 4px;}
 /* 250819 수정 */
@@ -765,7 +765,7 @@ span.ico16_loudspeaker_white{ display:inline-block;width:16px;height:16px;margin
 .quick_top a.btn_quick_top { display:block;width:60px;height:60px;background:url("../images/btn_quick_top.png") no-repeat}
 .quick_top a.btn_quick_login{display: flex; width: 60px; height: 60px; margin-bottom: 24px; border-radius: 50%;color: var(--col_white); background-color: var(--col_blue); font-weight: 600;} /* 20250602 수정 */
 .quick_top a.btn_quick_guide{display: flex; width: 60px; height: 60px; margin-bottom: 24px; border-radius: 50%;color: var(--col_body); background-color: #8ca8fe; font-weight: 600;}
-.quick_top div.div_chatbot_area a.quick_chatbot {display:flex;width:60px;height:60px;margin-bottom: 24px;background:url("../images/chatbot/chatbot_link_icon5.png") center center no-repeat;background-size: auto 100%;}
+.quick_top div.div_chatbot_area a.quick_chatbot {display:flex;width:60px;height:60px;margin-bottom: 24px;background:url("../images/chatbot_link_icon5.png") center center no-repeat;background-size: auto 100%;}
 .company .quick_top a.btn_quick_guide {color: var(--col_body); background-color:#8ca8fe;}
 .company .quick_top a.btn_quick_login {color: var(--col_white); background-color: var(--col_green);} /* 20250602 수정 */
 /* -------------------- LNB 영역 ---------------------------------------- */
@@ -774,6 +774,7 @@ span.ico16_loudspeaker_white{ display:inline-block;width:16px;height:16px;margin
 .lnb > ul > li:first-child { padding-top: 0; }
 .lnb > ul > li > a {  position:relative;display:inline-block;width:100%;padding-right:20px;box-sizing:border-box;font-size:16px;font-weight:bold;line-height:28px;color:var(--col_body) }
 .lnb li.depth > a::after { display:inline-block;content:"";position:absolute;top:6px;right:0px;width:16px;height:16px;background:url("../images/ico16_line_up_gray.svg") no-repeat;transform:rotate(180deg);transform-style:preserve-3d;transition:all .5s}
+.lnb li.depth > a.btn_link::after {transform: rotate(0deg);}
 .lnb li.depth > a.on::after { transform:rotate(0deg)}
 .lnb > ul > li + li { border-top:1px solid var(--col_border)}
 .lnb > ul > li + li:last-child { border-bottom:1px solid var(--col_border)}
@@ -971,7 +972,7 @@ body.dim:before {background-color:rgba(0, 0, 0, 0.16);content:"";position:fixed;
 .alert_pop > .box_btn_wrap { gap:8px}
 
 /* 팝업 */
-.full_pop {background-color:var(--col_white);display:none;overflow:hidden;position:fixed;left:50%;top:50%;transform:translate(-50%, -50%);padding:32px 40px 40px;z-index:997}
+.full_pop { max-height:100%; background-color:var(--col_white);display:none;overflow:hidden;position:fixed;left:50%;top:50%;transform:translate(-50%, -50%);padding:32px 40px 40px;z-index:997}
 .full_pop.small { width:640px}
 .full_pop.middle { width:800px}
 .full_pop.large { width:1040px}
@@ -979,7 +980,7 @@ body.dim:before {background-color:rgba(0, 0, 0, 0.16);content:"";position:fixed;
 .full_pop.max { min-width:100%;}
 .full_pop .head { position:relative;padding:0 0 24px;margin-bottom:24px; padding-right: 30px; border-bottom:1px solid var(--col_border);text-align:left;min-height:auto;z-index: 998;}
 .full_pop .head.type2 {margin-bottom:0;border-bottom:none}
-.full_pop > .closed {display:block;position:absolute;right:40px;top:36px;height:32px;width:32px; background:url("../../include/images/ico32_close.svg") no-repeat 0 0;z-index:999}
+.full_pop > .closed {display:block;position:absolute;right:40px;top:36px;height:32px;width:32px; background:url("../images/ico32_close.svg") no-repeat 0 0;z-index:999}
 .full_pop .pop_subtl, .full_pop .sub_tl_s01 { padding:0 0 16px}
 .full_pop .pop_subtl .essential {position:relative;top:-4px;left:6px}
 .full_pop > .cont {overflow-x:hidden;overflow-y:auto;height:100%;max-height: calc(100vh - 411px);}
@@ -1365,16 +1366,16 @@ table [class^='btn'].tbl_type06 {border:1px solid var(--col_red) !important; col
 .btn_txt.ico_arrow:after {content:"";display:block;position:absolute;right:0;top:50%;transform:translateY(-50%);width:16px;height:16px;background:url("../images/ico16_arrow_right_fill.svg")}
 .btn_txt.ico_arrow.clr_wh:after {background:url("../images/ico16_arrow_right_white.svg")}
 .btn_txt.ico_arrow.bk {color: var(--col_body);}
-.btn_txt.ico_arrow.bk:after {background: url('../images/ico16_arrow_right_black.svg') 0 0}
+.btn_txt.ico_arrow.bk:after {background: url('/cm/static/images/ico16_arrow_right_black.svg') 0 0}
 .btn_txt.ico_arrow.underline_no {text-decoration: none;}
 .btn_txt.ico_arrow.bk.hover {text-decoration: none;} /* 20250515 추가 */
 .btn_txt.ico_arrow.bk.hover:hover, .btn_txt.ico_arrow.bk:focus {color: var(--col_blue); text-decoration: underline;} /* 20250515 추가 */
-.btn_txt.ico_arrow.bk.hover:hover:after, .btn_txt.ico_arrow.bk:focus:after {background: url("../images/ico16_arrow_right_fill.svg") center center no-repeat;} /* 20250515 추가 */
+.btn_txt.ico_arrow.bk.hover:hover:after, .btn_txt.ico_arrow.bk:focus:after {background: url("/cm/static/images/ico16_arrow_right_fill.svg") center center no-repeat;} /* 20250515 추가 */
 /* S: 20250730 추가 */
 .btn_txt_hover {color: var(--col_blue);}
 .btn_txt_hover:hover, .btn_txt_hover:focus {text-decoration: underline;}
 .txt_ico_arr {position: relative; display: inline-block; padding-right: 20px; line-height: 24px; font-weight: 600; font-size: 16px; color: var(--col_body);}
-.txt_ico_arr::after {position: absolute; right: 0; top: 3px; display: block; width: 16px; height: 16px; background: url("../images/icon/16/ico16_line_right_filled.svg") 0 0 no-repeat;}
+.txt_ico_arr::after {position: absolute; right: 0; top: 3px; display: block; width: 16px; height: 16px; background: url("/cm/static/images/icon/16/ico16_line_right_filled.svg") 0 0 no-repeat;}
 .txt_ico_arr:hover, .txt_ico_arr:focus {text-decoration: underline;}
 /* E: 20250730 추가 */
 
@@ -1392,7 +1393,7 @@ table [class^='btn'].tbl_type06 {border:1px solid var(--col_red) !important; col
 .btn_link.right {padding-right:20px;padding-left:0;}
 .btn_link:not(.lnb > ul *).right:before, .lnb .btn_link.blue.right::after {right:0;left:auto;}
 .btn_link:not(.lnb > ul *).blue:before, .lnb .btn_link.blue::after {background:url("../images/ico16_share_blue.svg") no-repeat 0;}
-.blank_link {display: inline-block; padding-right: 16px; line-height: 24px; background: url("../images/icon/16/ico16_share.svg") right 3px no-repeat; font-size: 14px; font-weight: 600; color: var(--col_body); text-decoration: underline;} /* 250730 추가 */
+.blank_link {display: inline-block; padding-right: 16px; line-height: 24px; background: url("/cm/static/images/icon/16/ico16_share.svg") right 3px no-repeat; font-size: 14px; font-weight: 600; color: var(--col_body); text-decoration: underline;} /* 250730 추가 */
 
 .btn_share {padding-right: 10px;}
 
@@ -1948,13 +1949,14 @@ select option:disabled {color:var(--col_dis)}
 .box_notice_wrap.ico_type i + p { margin-left: 8px; }
 
 /* S: 250730 추가*/
+[class^="box_rnd_"].pd2440 {padding: 24px 40px;} /* 250730-1 추가 */
 [class^="box_rnd_"].pd4024 {padding: 40px 24px;}
 [class^="box_rnd_"].pd6024 {padding: 60px 24px;}
 .box_rnd_noti {padding: 16px 24px; border-radius: 6px;}
 .box_rnd_noti .tit {display: block; min-width: 0; line-height: 28px; font-weight: 600; font-size: 16px; color: var(--col_body); flex: 1;}
 .box_rnd_noti .tit a:hover, .box_rnd_noti .tit a:focus {text-decoration: underline;}
-.box_rnd_noti .tit.ico_alarm_red {padding-left: 32px; background: url("../images/icon/24/ico24_ui_alarm_red.svg") 0 2px no-repeat;}
-.box_rnd_noti .tit.ico_message_srch {padding-left: 32px; background: url("../images/icon/24/ico24_message_search.svg") 0 0 no-repeat;}
+.box_rnd_noti .tit.ico_alarm_red {padding-left: 32px; background: url("/cm/static/images/icon/24/ico24_ui_alarm_red.svg") 0 2px no-repeat;}
+.box_rnd_noti .tit.ico_message_srch {padding-left: 32px; background: url("/cm/static/images/icon/24/ico24_message_search.svg") 0 0 no-repeat;}
 .box_rnd_noti.blue {background-color: #f2f4fc;}
 .box_rnd_noti.gray {background-color: #f5f6f8;}
 .box_rnd_noti .noti_flex {display: flex; gap: 8px; justify-content: space-between; align-items: center;}
@@ -1967,6 +1969,7 @@ select option:disabled {color:var(--col_dis)}
 .box_message_wrap.type2 {padding:8px 24px}
 .box_message_wrap.type3 {padding:16px 24px}
 .box_message_wrap.type4 {padding:40px 80px}
+.box_message_wrap.type5 {padding:24px 40px} /* 250828 추가 */
 .box_message_wrap.tit_type {padding:24px}
 .box_message_wrap .tit {margin:0 0 8px;font-weight:600;line-height:28px}
 .box_message_wrap .tit.type2 {line-height:48px;font-size:20px}
@@ -2242,6 +2245,7 @@ tr.notice td {background:#F9FAFF}
 .tbl_label.gray{border-color:var(--col_gray);color:var(--col_gray)}
 .tbl_label.yellow{border-color:var(--col_yellow);color:var(--col_yellow)}
 .tbl_label.orange{border-color:var(--col_orange);color:var(--col_orange)}
+.tbl_label.fill.orange{border-color:var(--col_orange);background:var(--col_orange); color:var(--col_white);} /* 250828 추가 */
 .tbl_label.purple{border-color:var(--col_purple);color:var(--col_purple)}
 .tbl_label.navy{border-color:var(--col_navy);color:var(--col_navy)}
 .tbl_label.cyan{border-color:var(--col_cyan);color:var(--col_cyan)}
@@ -2394,6 +2398,7 @@ td span + .tbl_label_set{margin-left:16px;}
 .box_view_hd .data {margin-left:8px;font-weight:600}
 
 .box_view_cont {padding:24px 0 80px;line-height:32px}
+.box_view_cont img { vertical-align: top;}
 .box_table_view .box_file_view {border-top:1px solid var(--col_btn);border-bottom:1px solid var(--col_btn)}
 .box_file_view {display:flex;padding:12px 0 11px}
 .box_file_view .tit {margin:6px 24px 0 0;font-size:14px;color:var(--col_gray)}
@@ -3339,10 +3344,11 @@ input:focus { outline: 2px dashed #888; z-index:0;}
 
 span.ico08 { background:url("../images/ico32_category.svg") no-repeat; width:32px; height:32px; vertical-align:middle;}
 
-.u_search_point_color{
-	color: #4d65e1;
-	font-weight: 900;
-}
+.u_search_point_color {
+    color: var(--col_blue);
+    font-weight: 800;
+ } /* 250730 수정 */
+
 
 .display_flex_cut {
 	flex-shrink: 0;
@@ -3365,7 +3371,7 @@ span.ico08 { background:url("../images/ico32_category.svg") no-repeat; width:32p
 .new #header_menutree .header_info { display: flex; justify-content: flex-end;}
 .new #header_menutree .header_util { display: flex; justify-content: flex-end; height: 36px; margin-top: 8px;}
 .new #header_menutree .header_util li { display: flex; align-items: center;}
-.new #header_menutree .header_util li >a { display: flex; align-items: center; margin-left: 20px; font-size: 16px; font-weight: 600;}
+.new #header_menutree .header_util li >a { display: flex; align-items: center; margin-left: 16px; font-size: 16px; font-weight: 600;}
 .new #header_menutree .header_util li .col { display: flex; align-items: center; height: 36px; margin-left: 8px; padding: 0 8px; background: #F2F4FC; border-radius: 18px;}
 .new #header_menutree .header_util li .col .icons { width: 16px; height: 16px; margin-right: 8px; background: url(../images/ico16_time.svg) no-repeat;}
 .new #header_menutree .header_util li .col #timeOut { font-size: 14px; font-weight: 600; color: #3F58D4;}
@@ -3458,9 +3464,17 @@ header.new { position: sticky; transition: transform .3s ease;}
 /* // 250618 메인메뉴(GNB) HTML 수정 임정규 */
 
 /* 20250623 radio 공통버튼 (김무현) start */
-.radio_group input[type="checkbox"]:checked { border-color: #3F58D4; background: #3F58D4 url('../../../../../..../images/ico_check_white.svg') no-repeat center;}
+.radio_group input[type="checkbox"]:checked { border-color: #3F58D4; background: #3F58D4 url('../../../../../../cm/static/images/ico_check_white.svg') no-repeat center;}
 .radio_group input[type="checkbox"] {cursor: pointer; appearance: none; width: 1.25rem; height: 1.25rem; margin-top: 0; border: 1px solid #757575; background-color: #fff; border-radius: 0.25rem; transition: background-color .2s ease;}
 /* 20250623 radio 공통버튼 (김무현) start */
+/* 250730-1 추가 */
+.radio_group input[type="radio"] {position: relative; display: block; margin-top: -1px; width: 22px; height: 22px; border: none; opacity: 1; appearance: none;}
+.radio_group input[type="radio"]:before {position: absolute; left: 1px; top: 1px; width: 20px; height: 20px; border: 1px solid var(--col_button); border-radius: 50%; background-color: #fff; transition: border-color .2s, box-shadow .2s, background-color .5s; content: "";}
+.radio_group input[type="radio"]:checked::before {border-color: var(--col_blue); background-color: var(--col_blue); box-shadow: 0 0 0 5px var(--col_blue) inset;}
+.radio_group input[type="radio"]:disabled::before {border-color: var(--col_table); background-color: var(--col_button);}
+.radio_group input[type="radio"]:after {position: absolute; left: 50%; top: 50%; width: 10px; height: 10px; border-radius: 50%; background-color: #fff; transform: translate(-50%, -50%); content: "";}
+.radio_group input[type="radio"] ~ label {margin-left: 4px;}
+/* 250730-1 radio 공통버튼 (김무현) start *
 
 /* 20250625 GNB 화면/확대축소 설정(임정규) */
 .new #header_menutree .btn_screen,
